# oarepo-checks

./: README.md  TEMPLATES.md  oarepo.yaml  pyproject.toml
.github/workflows/: test.yaml
oarepo_checks/: __init__.py  cli.py  config.py  ext.py  llm_client.py  proxies.py  requests.py  tasks.py  utils.py  views.py
oarepo_checks/checks/: __init__.py  llm_check.py
oarepo_checks/model/: __init__.py
oarepo_checks/model/presets/: __init__.py  checks_preset.py
oarepo_checks/services/: __init__.py
oarepo_checks/services/components/: __init__.py  checks.py  register_check_config.py
oarepo_checks/templates/invenio_checks/requests/: llm_tab.html
oarepo_checks/templates/oarepo_checks/: community_rules.jinja2  llm_prompt.jinja2  repository_rules.jinja2
oarepo_checks/translations/: messages.pot
oarepo_checks/translations/cs/LC_MESSAGES/: messages.mo  messages.po
oarepo_checks/translations/en/LC_MESSAGES/: messages.mo  messages.po
oarepo_checks/ui/: __init__.py  components.py
tests/: __init__.py  conftest.py  dummy_llm_client.py  model.py  test_checks.py  test_cli.py  test_components.py  test_model_registered_components.py
tests/mock_module/: __init__.py
