[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oarepo-checks"
version = "2.1.1"
description = "An extension library for invenio-checks"
readme = "README.md"
license = "MIT"
dependencies = [
    "oarepo[rdm,tests]>=14.2.1b11.dev1,<15.0.0",
    "oarepo-invenio-typing-stubs>=0.1.0",   # dependency on Descriptor for typed system fields
    "invenio_checks>=10.0.0,<11.0.0",
    "oarepo-model>=5.0.0,<6.0.0",
    "oarepo-requests>=9.0.0,<10.0.0",
]
requires-python = ">=3.14,<3.15"

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-checks"

[project.optional-dependencies]
dev = [
    "pytest-invenio",
]
tests = [
    "pytest-invenio",
    "pytest-oarepo",
    "deepmerge==2.0"
]
oarepo14 = [
    "oarepo[rdm]>=14,<15",
]

[project.entry-points."invenio_celery.tasks"]
oarepo_checks = "oarepo_checks.tasks"

[project.entry-points."invenio_base.api_apps"]
oarepo_checks = "oarepo_checks.ext:OARepoChecks"

[project.entry-points."invenio_base.apps"]
oarepo_checks = "oarepo_checks.ext:OARepoChecks"

[project.entry-points."invenio_checks.check_types"]
llm_check = "oarepo_checks.checks.llm_check:LLMCheck"

[project.entry-points."invenio_base.blueprints"]
oarepo_checks = "oarepo_checks.views:bp"

[project.entry-points."invenio_base.api_blueprints"]
oarepo_checks = "oarepo_checks.views:bp"

[project.entry-points."flask.commands"]
checks = "oarepo_checks.cli:checks"

[project.entry-points."invenio_i18n.translations"]
oarepo_checks = "oarepo_checks"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_checks",
]

[tool.hatch.build.targets.wheel]
packages = ["oarepo_checks"]

[tool.hatch.build]
include = [
    "oarepo_checks/",
]

[tool.pytest.ini_options]
    testpaths = [
        "tests"
    ]

[tool.hatch.metadata]
allow-direct-references = true
